# Generated by Django 5.2.16 on 2026-07-17 00:48

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('catalog', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='ListaDeRecomendaciones',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=120, verbose_name='nombre')),
                ('descripcion', models.TextField(blank=True, verbose_name='descripción')),
                ('es_publica', models.BooleanField(default=False, verbose_name='es pública')),
                ('fecha_creacion', models.DateTimeField(auto_now_add=True, verbose_name='fecha de creación')),
                ('compartida_con', models.ManyToManyField(blank=True, help_text='RN-10: una lista privada solo es visible para amigos aceptados.', related_name='listas_compartidas', to=settings.AUTH_USER_MODEL, verbose_name='compartida con')),
                ('contenidos', models.ManyToManyField(blank=True, related_name='listas', to='catalog.contenidoaudiovisual', verbose_name='contenidos')),
                ('propietario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='listas', to=settings.AUTH_USER_MODEL, verbose_name='propietario')),
            ],
            options={
                'verbose_name': 'lista de recomendaciones',
                'verbose_name_plural': 'listas de recomendaciones',
                'ordering': ['-fecha_creacion'],
            },
        ),
    ]
