# Generated by Django 5.2.16 on 2026-07-17 00:48

import django.core.validators
import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('catalog', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Valoracion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('puntuacion', models.PositiveSmallIntegerField(help_text='RN-05: la puntuación va de 1 a 5.', validators=[django.core.validators.MinValueValidator(1), django.core.validators.MaxValueValidator(5)], verbose_name='puntuación')),
                ('comentario', models.TextField(blank=True, verbose_name='comentario')),
                ('fecha', models.DateTimeField(auto_now=True, verbose_name='fecha')),
                ('contenido', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='valoraciones', to='catalog.contenidoaudiovisual', verbose_name='contenido')),
                ('usuario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='valoraciones', to=settings.AUTH_USER_MODEL, verbose_name='usuario')),
            ],
            options={
                'verbose_name': 'valoración',
                'verbose_name_plural': 'valoraciones',
                'ordering': ['-fecha'],
                'constraints': [models.UniqueConstraint(fields=('usuario', 'contenido'), name='valoracion_unica_por_usuario_y_contenido'), models.CheckConstraint(condition=models.Q(('puntuacion__gte', 1), ('puntuacion__lte', 5)), name='valoracion_puntuacion_entre_1_y_5')],
            },
        ),
    ]
